--- a/packages/drawer/src/NestedCascadeDrawer.scss
+++ b/packages/drawer/src/NestedCascadeDrawer.scss
@@ -86,6 +86,7 @@
         }
         100% {
             display: none;
+            background-color: rgba(36,42,48,0.0);
         }
     }
 
@@ -98,6 +99,7 @@
         }
         100% {
             display: none;
+            transform: translateX(100%);
         }
     }
     @keyframes modal-in-web {
@@ -125,6 +127,7 @@
         }
         100% {
             display: none;
+            transform: translateY(100%);
         }
     }
     @keyframes modal-in-mobile {
