--- a/packages/drawer/src/NestedCascadeDrawer.scss
+++ b/packages/drawer/src/NestedCascadeDrawer.scss
@@ -112,6 +112,7 @@
             transform: translateX(100%);
         }
         100% {
+            animation-timing-function: step-end;
             transform: translateX(0);
         }
     }
