--- a/docs/src/Component/ReleaseNote.css
+++ b/docs/src/Component/ReleaseNote.css
@@ -1,12 +1,20 @@
 .ReleaseNote {
-    .ReleaseNoteCard {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
+    
+    details[open] .Arrow {
+        transform: rotate(180deg);
+    }
 
+    .ReleaseNoteCard {
         width: 100%;
         padding: 16px;
 
+        summary {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            cursor: pointer;
+        }
 
         .ReleaseTitle {
             margin: 0;
@@ -24,6 +32,7 @@
 
         .ReleaseBody {
             padding: 8px;
+            margin: 16px 0;
 
             border: 1px solid rgb(0,0,0,0.1);
             border-radius: 4px;
