--- a/docs/src/Component/ReleaseNote.css
+++ b/docs/src/Component/ReleaseNote.css
@@ -17,8 +17,15 @@
         }
 
         .ReleaseTitle {
-            margin: 0;
-            padding: 0;
+            display: flex;
+            align-items: flex-end;
+
+            gap: 8px;
+
+            h1 {
+                margin: 0;
+                padding: 0;
+            }
 
             a {
                 color: rgb(0,0,0);
